[package]
name = "nrf52840dk-sample"
version = "0.1.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
nrf52840-hal = "0.16.0"
